--- a/backend/clive/clive/.env
+++ b/backend/clive/clive/.env
@@ -1,3 +1,3 @@
 FRONTEND_URL = "http://localhost:5173"
 Wifi_URL = "http://192.168.1.14:5173"
-Wifi_IP ="192.168.1.14"
+Wifi_IP ="unicodebackend.ddns.net"
