--- a/frontend/campuslive/package.json
+++ b/frontend/campuslive/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.2",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
